Adjusted navbar within jumbotron

--- a/index.html
+++ b/index.html
@@ -35,15 +35,16 @@
     </div> 
     <div class="content">
         <div class="jumbotron">
-            <img src="images/2k-winter-sale-slider.jpg" class="jumbotron-img">
-            <nav class="nav-small">
-                <button>Your Store</button>
-                <button>Browse</button>
-                <button>Points Shop</button>
-                <button>News</button>
-                <button>Steam Labs</button>
-                <input type="text" placeholder="search the store" class="search">
-            </nav>
+            <div class="container">
+                <nav class="nav-small">
+                    <button>Your Store</button>
+                    <button>Browse</button>
+                    <button>Points Shop</button>
+                    <button>News</button>
+                    <button>Steam Labs</button>
+                    <input type="text" placeholder="search the store" class="search">
+                </nav>
+            </div>
         </div>
         <div class="sidebar">
             <div class="sidebar-header">Gift Cards</div>
