Added background video and promo image

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     </div> 
     <div class="content">
         <div class="jumbotron">
+            <video autoplay muted loop id="featuredVideo">
+                <source src="images/webm_page_bg_english.webm" type="video/webm">
+            </video>
             <div class="container">
                 <nav class="nav-small">
                     <button>Your Store</button>
@@ -47,6 +50,7 @@
             </div>
         </div>
         <div class="sidebar">
+            <img src="images/steamcards_promo_02.png" class="sidebar-promo">
             <div class="sidebar-header">Gift Cards</div>
             <div class="sidebar-items"><a href="#">Now Available on Steam</a></div>
             
