--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frontend Challenge #2</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="carousel.css">
 </head>
 <body>
     <div class="header">
@@ -33,7 +34,7 @@
             <a href="#">Support</a>    
         </nav>
     </div> 
-    <div class="content">
+    <div class="page-content">
         <div class="jumbotron">
             <video autoplay muted loop id="featuredVideo">
                 <source src="images/webm_page_bg_english.webm" type="video/webm">
@@ -45,6 +46,7 @@
                     <button>Points Shop</button>
                     <button>News</button>
                     <button>Steam Labs</button>
+                    <div class="space"></div>
                     <input type="text" placeholder="search the store" class="search">
                 </nav>
             </div>
@@ -85,15 +87,75 @@
             <div class="sidebar-items"><a href="#">Sports</a></div>
             <div class="sidebar-items"><a href="#">Strategy</a></div>
         </div>
-        <div class="carousel"></div>
-        <div class="carousel"></div>
-        <div class="carousel"></div>
-        <div>
-            <div>Browse Steam</div>
-            <div>New Releases</div>
-            <div>Specials</div>
-            <div>Free Games</div>
-            <div>By User Tags</div>
+        <div class="main-content">
+            <section class="carousel" aria-label="Gallery">
+                <ol class="carousel__viewport">
+                  <li id="carousel__slide1"
+                      tabindex="0"
+                      class="carousel__slide">
+                    <div class="carousel__snapper">
+                      <a href="#carousel__slide4"
+                         class="carousel__prev">Go to last slide</a>
+                      <a href="#carousel__slide2"
+                         class="carousel__next">Go to next slide</a>
+                    </div>
+                  </li>
+                  <li id="carousel__slide2"
+                      tabindex="0"
+                      class="carousel__slide">
+                    <div class="carousel__snapper"></div>
+                    <a href="#carousel__slide1"
+                       class="carousel__prev">Go to previous slide</a>
+                    <a href="#carousel__slide3"
+                       class="carousel__next">Go to next slide</a>
+                  </li>
+                  <li id="carousel__slide3"
+                      tabindex="0"
+                      class="carousel__slide">
+                    <div class="carousel__snapper"></div>
+                    <a href="#carousel__slide2"
+                       class="carousel__prev">Go to previous slide</a>
+                    <a href="#carousel__slide4"
+                       class="carousel__next">Go to next slide</a>
+                  </li>
+                  <li id="carousel__slide4"
+                      tabindex="0"
+                      class="carousel__slide">
+                    <div class="carousel__snapper"></div>
+                    <a href="#carousel__slide3"
+                       class="carousel__prev">Go to previous slide</a>
+                    <a href="#carousel__slide1"
+                       class="carousel__next">Go to first slide</a>
+                  </li>
+                </ol>
+                <aside class="carousel__navigation">
+                  <ol class="carousel__navigation-list">
+                    <li class="carousel__navigation-item">
+                      <a href="#carousel__slide1"
+                         class="carousel__navigation-button">Go to slide 1</a>
+                    </li>
+                    <li class="carousel__navigation-item">
+                      <a href="#carousel__slide2"
+                         class="carousel__navigation-button">Go to slide 2</a>
+                    </li>
+                    <li class="carousel__navigation-item">
+                      <a href="#carousel__slide3"
+                         class="carousel__navigation-button">Go to slide 3</a>
+                    </li>
+                    <li class="carousel__navigation-item">
+                      <a href="#carousel__slide4"
+                         class="carousel__navigation-button">Go to slide 4</a>
+                    </li>
+                  </ol>
+                </aside>
+            </section>
+            <div>
+                <div>Browse Steam</div>
+                <div>New Releases</div>
+                <div>Specials</div>
+                <div>Free Games</div>
+                <div>By User Tags</div>
+            </div>
         </div>
     </div>
 </body>
