Added placeholders for the page content

--- a/index.html
+++ b/index.html
@@ -150,12 +150,56 @@
                       </ol>
                     </aside>
                 </section>
-                <div>
-                    <div>Browse Steam</div>
-                    <div>New Releases</div>
-                    <div>Specials</div>
-                    <div>Free Games</div>
-                    <div>By User Tags</div>
+                <div class="cluster-1">
+                    <div>
+                        <h2 class="cluster-header">Featured and Recommended</h2>
+                    </div>
+                </div>
+                <div class="cluster-2">
+                    <div>
+                        <h2 class="cluster-header">Special Offers</h2>
+                    </div>
+                </div>
+                <div class="cluster-3">
+                    <div>
+                        <h2 class="cluster-header"></h2>
+                    </div>
+                </div>
+                <div class="cluster-4">
+                    <div class="button-cluster-container">
+                        <h2 class="cluster-header">Browse Steam</h2>
+                        <div class="button-cluster">
+                            <button class="button-big"><a>New Releases</a></button>
+                            <button class="button-big"><a>Specials</a></button>
+                            <button class="button-big"><a>Free Games</a></button>
+                            <button class="button-big"><a>By User Tags</a></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="cluster-5">
+                    <div>
+                        <h2 class="cluster-header">Popular VR Games</h2>
+                    </div>
+                </div>
+                <div class="cluster-6">
+                    <div>
+                        
+                    </div>
+                </div>
+                <div class="cluster-7">
+                    <div>
+                        <h2 class="cluster-header">Games Streaming Now</h2>
+                    </div>
+                </div>
+                <div class="cluster-8">
+                    <div>
+                        <h2 class="cluster-header">Under P400</h2>
+                    </div>
+                </div>
+                <div class="cluster-9">
+                    <div>
+                        <h2 class="cluster-header">Updates and Offers</h2>
+                    </div>
                 </div>
             </div>
         </div>
