Added Games Streaming Now Section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/styles/sections/special-offers.css">
     <link rel="stylesheet" href="/styles/sections/community-recommends.css">
     <link rel="stylesheet" href="/styles/sections/popular-vr-games.css">
+    <link rel="stylesheet" href="/styles/sections/games-streaming-now.css">
     <link rel="stylesheet" href="/styles/sections/underx.css">
 </head>
 <body>
@@ -308,6 +309,51 @@
                         </a>
                     </span>
                 </h2>
+                <div class="games-streaming-grid">
+                    <div class="games-streaming-capsule games-streaming-spacer">
+                        <div class="games-streaming-header"></div>
+                        <div class="games-streaming-footer">
+                            <div class="games-title">Nibiru</div>
+                            <div class="games-viewer">2861</div>
+                        </div>
+                    </div>
+                    <div class="games-streaming-capsule games-streaming-spacer">
+                        <div class="games-streaming-header"></div>
+                        <div class="games-streaming-footer">
+                            <div class="games-title">Loop Hero</div>
+                            <div class="games-viewer">1360</div>
+                        </div>
+                    </div>
+                    <div class="games-streaming-capsule games-streaming-spacer">
+                        <div class="games-streaming-header"></div>
+                        <div class="games-streaming-footer">
+                            <div class="games-title">Ghost Stories 2</div>
+                            <div class="games-viewer">1071</div>
+                        </div>
+                    </div>
+                    <div class="games-streaming-capsule games-streaming-spacer">
+                        <div class="games-streaming-header"></div>
+                        <div class="games-streaming-footer">
+                            <div class="games-title">Breathedge</div>
+                            <div class="games-viewer">841</div>
+                        </div>
+                    </div>
+                    <div class="games-streaming-capsule games-streaming-spacer">
+                        <div class="games-streaming-header"></div>
+                        <div class="games-streaming-footer">
+                            <div class="games-title">Aim Lab</div>
+                            <div class="games-viewer">637</div>
+                        </div>
+                    </div>
+                    <div class="games-streaming-capsule">
+                        <div class="games-streaming-header"></div>
+                        <div class="games-streaming-footer">
+                            <div class="games-title">Fall Guys: Ultimate Knockout</div>
+                            <div class="games-viewer">493</div>
+                        </div>
+                    </div>
+                    
+                </div>
             </section>
             <section class="under-p400">
                 <h2 class="section-header">
