Added a grid to the Updates and Offers section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="/styles/sections/popular-vr-games.css">
     <link rel="stylesheet" href="/styles/sections/games-streaming-now.css">
     <link rel="stylesheet" href="/styles/sections/underx.css">
+    <link rel="stylesheet" href="/styles/sections/updates-and-offers.css">
 </head>
 <body>
     <div class="container">
@@ -396,6 +397,15 @@
             </section>
             <section class="updates-and-offers">
                 <h2 class="section-header">Updates and Offers</h2>
+                <div class="updates-and-offers-grid">
+                    <div class="updates-and-offers-capsule"></div>
+                    <div class="updates-and-offers-subgrid">
+                        <div class="updates-and-offers-capsule updates-and-offers-spacertop">1</div>
+                        <div class="updates-and-offers-capsule updates-and-offers-spacertop">2</div>
+                        <div class="updates-and-offers-capsule updates-and-offers-spacertop">3</div>
+                        <div class="updates-and-offers-capsule updates-and-offers-spacerbot">4</div>
+                    </div>
+                </div>
             </section>
             <footer></footer>
         </div>
